# TubeSub

./: .gitignore  Cargo.toml  README.md  prd.md
.github/workflows/: build-windows.yml  release.yml
src/: app.rs  config.rs  main.rs
src/subtitle/: srt.rs
src/ui/: auth_status.rs  drop_target.rs  mod.rs  settings_window.rs  video_row.rs  window.rs
src/youtube/: api.rs  auth.rs
