[package]
name = "tubesub"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.7", package = "gtk4" }
adw = { version = "0.5", package = "libadwaita", features = ["v1_1"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
open = "5"
url = "2"
dirs = "5"
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
